Bug #905 School form layout issue

--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -105,7 +105,6 @@ textarea{
 
 input{
   box-sizing: border-box;
-  padding-left: 8px;
 }
 
 input[type='checkbox']{
