--- a/source/styles/ui/forms/b_form.scss
+++ b/source/styles/ui/forms/b_form.scss
@@ -13,10 +13,9 @@
 
 .bForm input[type="text"],
 .bForm input[type="password"]{
-  width: 138px;
+  width: 300px;
   height: auto;
   border: none;
-  border-bottom: solid #ccc 1px;
   background: transparent;
   border-radius: 0;
 }
@@ -33,7 +32,7 @@
 .eForm_fieldInput textarea{
   resize: vertical;
   min-height: 70px;
-  min-width: 194px;
+  min-width: 300px;
 }
 
 .eForm_fieldInput.mHidden {
@@ -69,6 +68,7 @@
   display: inline-block;
   min-width: 150px;
   padding: 7px 10px 0 0;
+  vertical-align: top;
 }
 .eForm_fieldName:empty {
   display: none;
@@ -77,6 +77,7 @@
 
   .eForm_fieldName{
     width: 190px;
+    display: block;
   }
   .eForm_confirmField{
     margin-left: -200px;
@@ -87,6 +88,7 @@
   width: 100%;
   justify-content: flex-end;
   box-sizing: border-box;
+  padding: 25px;
 }
 
 .eForm_atCenter{
@@ -356,5 +358,5 @@
 
 }
 .bForm .eCombobox_input{
-  width: 138px;
+  width: 300px;
 }
